Bug 277992 - Removed mouse from device list in KCM while using the connection wizard crashed the KCM
Summary: Removed mouse from device list in KCM while using the connection wizard crash...
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: bluetooth-kcm (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Alex Fiestas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-18 06:32 UTC by Elias Probst
Modified: 2011-10-07 22:46 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elias Probst 2011-07-18 06:32:40 UTC
Application: kcmshell4 ()
KDE Platform Version: 4.6.5 (4.6.5) (Compiled from sources)
Qt Version: 4.7.2
Operating System: Linux 2.6.38-gentoo-r6 x86_64
Distribution: "Gentoo Base System release 2.0.2"

-- Information about the crash:
- What I was doing when the application crashed:
My bluetooth mouse (Logitech M55b) didn't work anymore. It kept re-connecting all the time, without actually making it possible to move the mousepointer.
When looking at the list of connected devices in the KCM, it appeared/disappeared every ~15 seconds, so I decided to connect the mouse again using the device wizard.
Although I previously disconnected/removed the mouse from the list, it re-appeared shortly after I started the wizard, so I decided to remove it again from the list before I continued to use the wizard.
When I removed the mouse from the list in the background while the wizard was running, the KCM crashed, resulting in the following backtrace.

-- Backtrace:
Application: KDE-Kontrollmodul (kcmshell4), signal: Segmentation fault
[KCrash Handler]
#6  BlueDevil::Device::Private::_k_ensureDeviceCreated (this=0x20, busDevicePath=...) at /var/tmp/portage/net-libs/libbluedevil-1.9/work/libbluedevil-1.9/bluedevil/bluedevildevice.cpp:138
#7  0x00007f34c84948c5 in BlueDevil::Device::UBI (this=0xc0ce20) at /var/tmp/portage/net-libs/libbluedevil-1.9/work/libbluedevil-1.9/bluedevil/bluedevildevice.cpp:374
#8  0x00007f34c848963a in BlueDevil::Adapter::removeDevice (this=0x834270, device=0x7fff49aae670) at /var/tmp/portage/net-libs/libbluedevil-1.9/work/libbluedevil-1.9/bluedevil/bluedeviladapter.cpp:399
#9  0x00007f34c86f470d in KCMBlueDevilDevices::removeDevice() () from /usr/lib64/kde4/kcm_bluedevildevices.so
#10 0x00007f34c86f0b16 in KCMBlueDevilDevices::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib64/kde4/kcm_bluedevildevices.so
#11 0x00007f34d777eb31 in QMetaObject::activate (sender=0x9bb770, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x0) at kernel/qobject.cpp:3278
#12 0x00007f34d71c3b50 in QAbstractButton::clicked (this=0x20, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:206
#13 0x00007f34d6f0e740 in QAbstractButtonPrivate::emitClicked (this=0x9b71a0) at widgets/qabstractbutton.cpp:546
#14 0x00007f34d6f0fb2c in QAbstractButtonPrivate::click (this=0x9b71a0) at widgets/qabstractbutton.cpp:539
#15 0x00007f34d6f0fd26 in QAbstractButton::mouseReleaseEvent (this=0x9bb770, e=0x7fff49aaf4b0) at widgets/qabstractbutton.cpp:1121
#16 0x00007f34d6bdd9bd in QWidget::event (this=0x9bb770, event=0x7fff49aaf4b0) at kernel/qwidget.cpp:8259
#17 0x00007f34d6b90b85 in QApplicationPrivate::notify_helper (this=0x624350, receiver=0x9bb770, e=0x7fff49aaf4b0) at kernel/qapplication.cpp:4462
#18 0x00007f34d6b95fbb in QApplication::notify (this=0x7fff49ab0070, receiver=0x9bb770, e=0x7fff49aaf4b0) at kernel/qapplication.cpp:4023
#19 0x00007f34d844aca0 in KApplication::notify (this=0x7fff49ab0070, receiver=0x9bb770, event=0x7fff49aaf4b0) at /var/tmp/portage/kde-base/kdelibs-4.6.5/work/kdelibs-4.6.5/kdeui/kernel/kapplication.cpp:311
#20 0x00007f34d7768eae in QCoreApplication::notifyInternal (this=0x7fff49ab0070, receiver=0x9bb770, event=0x7fff49aaf4b0) at kernel/qcoreapplication.cpp:731
#21 0x00007f34d6b947d4 in sendEvent (receiver=0x9bb770, event=0x7fff49aaf4b0, alienWidget=0x9bb770, nativeWidget=0x719eb0, buttonDown=<value optimized out>, lastMouseReceiver=<value optimized out>, spontaneous=true) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#22 QApplicationPrivate::sendMouseEvent (receiver=0x9bb770, event=0x7fff49aaf4b0, alienWidget=0x9bb770, nativeWidget=0x719eb0, buttonDown=<value optimized out>, lastMouseReceiver=<value optimized out>, spontaneous=true) at kernel/qapplication.cpp:3122
#23 0x00007f34d6c0d8ad in QETWidget::translateMouseEvent (this=0x719eb0, event=<value optimized out>) at kernel/qapplication_x11.cpp:4461
#24 0x00007f34d6c0c6d5 in QApplication::x11ProcessEvent (this=<value optimized out>, event=0x7fff49aafc30) at kernel/qapplication_x11.cpp:3587
#25 0x00007f34d6c33e79 in x11EventSourceDispatch (s=0x622a00, callback=<value optimized out>, user_data=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:146
#26 0x00007f34d34d74cc in g_main_dispatch (context=0x6211e0) at gmain.c:2441
#27 g_main_context_dispatch (context=0x6211e0) at gmain.c:3014
#28 0x00007f34d34db1a1 in g_main_context_iterate (context=0x6211e0, block=<value optimized out>, dispatch=<value optimized out>, self=<value optimized out>) at gmain.c:3092
#29 0x00007f34d34db35e in g_main_context_iteration (context=0x6211e0, may_block=1) at gmain.c:3155
#30 0x00007f34d7790f52 in QEventDispatcherGlib::processEvents (this=0x6044a0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#31 0x00007f34d6c338d2 in QGuiEventDispatcherGlib::processEvents (this=0x20, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#32 0x00007f34d7767ee2 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#33 0x00007f34d7768241 in QEventLoop::exec (this=0x7fff49aaff50, flags=) at kernel/qeventloop.cpp:201
#34 0x00007f34d700d354 in QDialog::exec (this=0x719eb0) at dialogs/qdialog.cpp:552
#35 0x00007f34d8e0dc38 in kdemain (_argc=<value optimized out>, _argv=<value optimized out>) at /var/tmp/portage/kde-base/kcmshell-4.6.5/work/kcmshell-4.6.5/kcmshell/main.cpp:287
#36 0x00007f34d8acacbc in __libc_start_main (main=<value optimized out>, argc=<value optimized out>, ubp_av=<value optimized out>, init=<value optimized out>, fini=<value optimized out>, rtld_fini=<value optimized out>, stack_end=0x7fff49ab07f8) at libc-start.c:226
#37 0x00000000004006e9 in _start ()

Reported using DrKonqi
Comment 1 Alex Fiestas 2011-10-07 22:38:44 UTC
Git commit 8a6cadc7cec774d69ca511a4abd0fadc56b2ddd9 by Alex Fiestas.
Committed on 08/10/2011 at 00:34.
Pushed by afiestas into branch '1.0'.

Be sure that the device still exists when deleting a device

BUG: 277992
FIXED-IN: 1.0.6

M  +8    -1    src/kcmodule/bluedevildevices.cpp

http://commits.kde.org/bluedevil/8a6cadc7cec774d69ca511a4abd0fadc56b2ddd9
Comment 2 Alex Fiestas 2011-10-07 22:46:11 UTC
Git commit 117648e77023e9e2f5b233770447990399d287f9 by Alex Fiestas.
Committed on 08/10/2011 at 00:34.
Pushed by afiestas into branch '1.1'.

Be sure that the device still exists when deleting a device

BUG: 277992

M  +11   -3    src/kcmodule/bluedevildevices.cpp

http://commits.kde.org/bluedevil/117648e77023e9e2f5b233770447990399d287f9