Be sure that the device still exists when deleting a device

BUG: 277992