src/kcmodule/bluedevildevices.cpp
@@ -480,9 +480,17 @@ void KCMBlueDevilDevices::removeDevice()
 {
     m_removeDevice->setEnabled(false);
     Device *const device = static_cast<Device*>(m_devices->currentIndex().data(BluetoothDevicesModel::DeviceModelRole).value<void*>());
-    if (KMessageBox::questionYesNo(this, i18n("Are you sure that you want to remove the device \"%1\" from the list of known devices?", device->alias()),
-                                   i18nc("Title of window that asks for confirmation when removing a device", "Device Removal")) == KMessageBox::Yes) {
-        BlueDevil::Manager::self()->defaultAdapter()->removeDevice(device);
+
+    QString ubi = device->UBI();
+    if (KMessageBox::questionYesNo(this, i18n("Are you sure that you want to remove device \"%1\" from the list of known devices?", device->alias()),
+                                   i18nc("Title of window that asks for confirmation when removing a device", "Device removal")) == KMessageBox::Yes) {
+        QList<Device *> deviceList = BlueDevil::Manager::self()->defaultAdapter()->devices();
+        Q_FOREACH(Device *item, deviceList) {
+            if (item->UBI() == ubi) {
+                BlueDevil::Manager::self()->defaultAdapter()->removeDevice(device);
+                return;
+            }
+        }
     } else {
         m_removeDevice->setEnabled(true);
     }
